added sync and Async response